<?xml version="1.0" encoding="utf-8"?>
<!--
Marija Jovicic
Project 2
4/23/2020
-->
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
  >

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical"
   >


    <EditText
        android:id="@+id/principal"
        android:layout_width="300dp"
        android:layout_height="80dp"
        android:layout_margin="10dp"
        android:hint="@string/principal"
        android:inputType="numberDecimal"
        android:textColor="@color/textColor" />

    <EditText
        android:id="@+id/interestRate"
        android:layout_width="300dp"
        android:layout_height="80dp"
        android:layout_margin="10dp"
        android:hint="@string/mInterest"
        android:inputType="numberDecimal"
        android:textColor="@color/textColor" />

    <EditText
        android:id="@+id/loanTerm"
        android:layout_width="300dp"
        android:layout_height="80dp"
        android:layout_margin="10dp"
        android:hint="@string/loanTerm"
        android:inputType="numberDecimal"
        android:textColor="@color/textColor" />

    <Button
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="15dp"
        android:background="#D6E9EC"
        android:onClick="getMonthlyPayment"
        android:text="@string/calculate"
        android:textColor="@color/textColor" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/userMessage"
        android:textColor="@color/textColor"
        android:textSize="15sp"

        />

    <TextView
        android:id="@+id/display"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_margin="8dp"
        android:background="@drawable/back"
        android:padding="10dp"
        android:text="@string/placeholder"
        android:textColor="@color/textColor"
        android:textSize="15sp" />


</LinearLayout>
</ScrollView>